startup and window positioning in place.

--- a/src/County Plot Manager/County Plot Manager/County Plot Manager.csproj
+++ b/src/County Plot Manager/County Plot Manager/County Plot Manager.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\ViewModelMain.cs" />
     <Compile Include="Windows\wndMain.xaml.cs">
       <DependentUpon>wndMain.xaml</DependentUpon>
     </Compile>
