--- a/src/County Plot Manager/County Plot Manager/App.config
+++ b/src/County Plot Manager/County Plot Manager/App.config
@@ -2,20 +2,20 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="County_Plot_Manager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="PlotManager.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <userSettings>
-        <County_Plot_Manager.Properties.Settings>
+        <PlotManager.UI.Properties.Settings>
             <setting name="MainWindowPosition" serializeAs="String">
                 <value>10,10,800,600</value>
             </setting>
             <setting name="MainWindowState" serializeAs="String">
                 <value>Normal</value>
             </setting>
-        </County_Plot_Manager.Properties.Settings>
+        </PlotManager.UI.Properties.Settings>
     </userSettings>
 </configuration>
