--- a/src/County Plot Manager/County Plot Manager/PlotManager.UI.csproj
+++ b/src/County Plot Manager/County Plot Manager/PlotManager.UI.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C54E612E-911B-4B59-AB46-18466810F9AB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>County_Plot_Manager</RootNamespace>
-    <AssemblyName>County Plot Manager</AssemblyName>
+    <RootNamespace>PlotManager.UI</RootNamespace>
+    <AssemblyName>PlotManager.UI</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
