--- a/src/County Plot Manager/County Plot Manager/PlotManager.UI.csproj
+++ b/src/County Plot Manager/County Plot Manager/PlotManager.UI.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Classes\Converters\IntToFontSizeConverter.cs" />
+    <Compile Include="Classes\Converters\IntToHeightConverter.cs" />
     <Compile Include="Styles\UserControls\CloseButton.xaml.cs">
       <DependentUpon>CloseButton.xaml</DependentUpon>
     </Compile>
@@ -67,6 +68,9 @@
     </Compile>
     <Compile Include="UserControls\PlotGroup.xaml.cs">
       <DependentUpon>PlotGroup.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\PlotGroupSimple.xaml.cs">
+      <DependentUpon>PlotGroupSimple.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\PlotMap.xaml.cs">
       <DependentUpon>PlotMap.xaml</DependentUpon>
@@ -139,6 +143,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\PlotGroup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\PlotGroupSimple.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
