Working on data entry screens

--- a/src/County Plot Manager/County Plot Manager/PlotManager.UI.csproj
+++ b/src/County Plot Manager/County Plot Manager/PlotManager.UI.csproj
@@ -67,6 +67,12 @@
     <Compile Include="UserControls\Cemetery.xaml.cs">
       <DependentUpon>Cemetery.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\DataEntry\Name.xaml.cs">
+      <DependentUpon>Name.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\DataEntry\PlotOwners.xaml.cs">
+      <DependentUpon>PlotOwners.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\FlagPole.xaml.cs">
       <DependentUpon>FlagPole.xaml</DependentUpon>
     </Compile>
@@ -143,6 +149,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\Cemetery.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\DataEntry\Name.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\DataEntry\PlotOwners.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
