--- a/src/County Plot Manager/County Plot Manager/PlotManager.UI.csproj
+++ b/src/County Plot Manager/County Plot Manager/PlotManager.UI.csproj
@@ -89,6 +89,12 @@
     <Compile Include="UserControls\DataEntry\Phone.xaml.cs">
       <DependentUpon>Phone.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\DataEntry\PlotOwners.xaml.cs">
+      <DependentUpon>PlotOwners.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\DataEntry\Tenant.xaml.cs">
+      <DependentUpon>Tenant.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\FlagPole.xaml.cs">
       <DependentUpon>FlagPole.xaml</DependentUpon>
     </Compile>
@@ -193,6 +199,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\DataEntry\Phone.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\DataEntry\PlotOwners.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\DataEntry\Tenant.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
